Fix word wrap and overall precision

--- a/styles.css
+++ b/styles.css
@@ -26,19 +26,18 @@
     border: 1px solid black;
     margin: 5px;
     background-color: rgb(195, 251, 233);
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .display1 {
-    display: flex;
-    align-items: center;
-    height: 50px;
+    min-height: 32px;
+    font-size: 20px;
     padding-left: 10px;
 }
 .display2 {
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    height: 50px;
+    min-height: 64px;
+    font-size: 40px;
     text-align: end;
     padding-right: 10px;
 }
